[tool.poetry]
name = "tbw"
version = "0.1.0"
description = "Tobis Basic Web-template (featuring: python, gunicorn, sqlachemy, flask, flask-restx, etc.)"
authors = ["Tobias Kurze <it@t-kurze.de>"]
license = "none"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
flask-restx = "^0.5.1"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
